# AIDJ

./: .dj_history  .gitignore  IF_YOU_ARE_AI_READ_THIS.md  README.AI.md  README.md  cfgedit.py  commands.py  config.py  dj_core.py  download_music  log.py  loudness.py  lyrics_sync.py  main.beautified.py  main.py  main.text-based.py  player.py  pyproject.toml  repopack-output.md  requirements.txt  simp_zhconv.py  ui.py  wait_game.py  wait_games.py
core/: analyse.py  command_handler.py  config.py  dj_core.py  loudness.py  player.py  ui.py
data/playlists/: demo.txt  running_up_that_hill.txt
games/: auto_2048.py  dino.py  flappybird.py  matrix.py  pong.py  slots.py  snake.py  space.py  wait_games.py
help/: adjmethod.md  analyse.md  games.md  generate.md  index.md  lyrics.md  pc.md  playback.md  playlist-io.md  playlist.md  system.md  volbal.md  volcurve.md
older_version/: main.old.py  main.r1.0.py
playlists/: demo.txt  jay_mix.txt  宋冬野.txt
tools/: README.md  download_music  fuzz_lrc_match.py  leak_check.py  lyrics_sync.py  lyrics_sync_lyrica.py  simp_zhconv.py
