[project]
name = "aidj"
version = "0.1.0"
description = "AI DJ - LLM-powered music curator with DBus/MPV/VLC playback"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=15.0.1",
    "mutagen>=1.47.0",
    "tqdm>=4.67.1",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "rapidfuzz>=3.0.0",
    "questionary>=2.0.0",
    "prompt-toolkit>=3.0.0",
    "dbus-python>=1.3.0",
    "pydbus>=0.6.0",
    "zhconv>=1.4.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "pyloudnorm>=0.1.0",
]
